Add session id to delete
